# aoc2020

./: Cargo.toml
src/: lib.rs  main.rs  util.rs
src/days/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs
src/days/day_01/: mod.rs
