[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Mike Boyle <michael.boyle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-display = "0.4"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
strum = "0.20"
strum_macros = "0.20"
regex = "1"
lazy_static = "1.4.0"